feat: handling message streaming after sending Message in Go Backend
